# matchday

./: .gitignore  README.md  build.sh  manage.py  pyproject.toml
matchday/: admin.py  asgi.py  models.py  routes.py  serializers.py  settings.py  urls.py  wsgi.py
matchday/migrations/: 0001_initial.py  0002_alter_author_last_name_and_more.py
tests/unit/: example_db.json  test_endpoints.py
