[tool.poetry]
name = "matchday"
version = "0.1.0"
description = ""
authors = ["Lei Ferretti <elisa.c.ferretti@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.1"
djangorestframework = "^3.14.0"
requests = "^2.30.0"


[tool.poetry.group.dev.dependencies]
responses = "^0.23.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
